Bug 1567185 - Fixing the gap size between the search glass icon and the edge of the url bar. r=johannh
This patch adds a css rule to change the margin between glass icon
and the edge of url bar. This is needed since the tracking protection
icon won't be shown when search glass icon is shown.

Differential Revision: https://phabricator.services.mozilla.com/D38502

UltraBlame original commit: 08ba69b8187b554c4ebd24b92ba1ba8273214fbb

--- a/browser/themes/shared/identity-block/identity-block.inc.css
+++ b/browser/themes/shared/identity-block/identity-block.inc.css
@@ -128,6 +128,9 @@
 
 #urlbar[pageproxystate="invalid"] > #identity-box > #identity-icon {
   list-style-image: url(chrome://browser/skin/search-glass.svg);
+  
+
+  margin-inline-start: 4px;
   fill-opacity: .4;
 }
 
